--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "buffer": "^6.0.3",
     "chatgpt": "^5.2.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^4.28.4",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
-    "react-router": "^6.22.0",
-    "react-router-dom": "^6.22.0",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
