--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "openai": "^4.28.4",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
