--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "g5",
+  "name": "vocabverse",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@mantine/carousel": "^7.6.2",
     "@mantine/core": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
+    "@sendgrid/mail": "^8.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
@@ -31,6 +33,7 @@
     "sass": "^1.72.0",
     "sendgrid": "^5.2.3",
     "stream-browserify": "^3.0.0",
+    "styled-components": "^6.1.8",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
