--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.72.0",
     "sendgrid": "^5.2.3",
+    "slick-carousel": "^1.8.1",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.8",
     "util": "^0.12.5",
